2006-02-09  Harish Krishnaswamy  <kharish@novell.com>

	* e-bconf-map.c: Upstreaming Olaf Hering's patch
	to use signed chars. 

2006-02-08  Kjartan Maraas <kmaraas@gnome.org>

	* e-config.c: Use guint for 1-bit bitfield.
	* e-icon-factory.c: (load_icon): Remove unused var
	* e-import.c: (ep_init), (ep_finalise): Remove unused vars
	* e-plugin.c: (e_plugin_register_type): Rename a var
	* e-plugin.h: guint for 1-bit bitfield
	* e-popup.c: (ep_finalise): Add comment.
	* e-profile-event.c: Remove unused prototype
	* e-text-event-processor-emacs-like.c: 
	(e_text_event_processor_emacs_like_event): Add comment about
	a compiler warning from the Intel compiler.

2006-02-07  Benjamin Berg  <benjamin@sipsolutions.net>
	* e-gui-utils.c:
	* e-icon-factory.c:
	accept SVGs for stock icons. Fixes bug 304417.

2006-01-11  Harry Lu  <harry.lu@sun.com>

	* e-marshal.list: removed.

2006-01-11  Chenthill Palanisamy  <pchenthill@novell.com>

	* e-menu.c: Fixes a build break. Replace the 
	libedataserver/e-util.h with libedataserver/e-data-server-util.h.

2006-01-10  Simon Zheng  <simon.zheng@sun.com>

	* e-mktemp.c (get_dir):
	* e-plugin.c:
	* e-util.[ch] (e_create_directory):
	(e_sort):
	Delete e_mkdir_hier(), and use e_util_mkdir_hier() 
	instead of it.

	Delete e_strstrcasea(), and use e_util_strstrcase() 
	instead of it.

	Delete e_strftime(), use the copy in evolution-data-server/
	libedataserver/e-data-server-util.c instead of it.

	Delete e_filename_make_safe(), and use the copy in 
	evolution-data-server/libedataserver/e-data-server-util.c
	instead of it.

	Detelte e_utf8_strftime(), and use the copy in 
	evolution-data-server/libedataserver/e-data-server-util.c
	instead of it.     

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* e-account.[ch], e-account-list.[ch]: removed. 
	Merged to evolution-data-server/libedataserver/.
	* Makefile.am: remove above files from list.

2006-01-05  Tor Lillqvist  <tml@novell.com>

	* e-plugin.c (epl_construct)