@@ -1,3 +1,9 @@
+2006-02-12  Karsten Bräckelmann  <guenther@rudersport.de>
+
+	* e-error.c (e_error_newv): 
+	Removing unnecessary markup in translateable string.
+	Fixes part of bug #272789.
+
 2006-02-09  Harish Krishnaswamy  <kharish@novell.com>
 
 	* e-bconf-map.c: Upstreaming Olaf Hering's patch
